--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="mode-desc">This mode is meant for running fissure relic missions. When the mission loads, open the options menu and take a picture of the users in the top left to capture their relic data.</div>
     <button id="massModeBtn" class="mode-btn">Mass Scan</button>
     <div class="mode-desc">This mode is for scanning multiple relics from your inventory or a saved image from your phone.</div>
+    <div class="example-label">Example:</div>
+    <img src="example.jpg" alt="Example" class="example-img" />
   </div>
   <div id="scanSection" style="display:none;">
     <button id="scanBtn">Scan Image</button>
