--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="debug" style="color: red; font-weight: bold;"></div>
   <h1>Warframe Relic Scanner</h1>
   <div id="modeSelect">
     <div class="example-label">Example:</div>
