--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1>Warframe Relic Scanner</h1>
   <img src="example.jpg" alt="Example" id="exampleImg" style="max-width: 90vw; max-height: 180px; display: block; margin: 0 auto 0.5rem auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.5);" />
+  <div style="text-align:center; font-size:0.97em; color:#ffd; margin-bottom:0.7rem; background:#232323; border-radius:6px; padding:0.4em 0.8em; max-width:500px; margin-left:auto; margin-right:auto;">
+    <strong>Tip:</strong> The example image above is for quickly scanning relics for fissure missions.<br>
+    You can also upload your own screenshots of your relic inventory for either the 4 relic (Fissure) or Mass Scan options.
+  </div>
   <div class="instructions" style="margin-bottom: 1.2rem; text-align: center;">
     When the mission begins, load the options menu and take a picture of the users in the top left to capture their relic data or manually enter the relics.
   </div>
