--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <label for="scanMode" style="font-weight: bold;">Scan Mode:</label>
     <select id="scanMode">
       <option value="fissure">Fissure Scan (up to 4 relics)</option>
-      <option value="mass">Mass Scan (all found)</option>
+      <option value="mass">Mass Scan (up to 20)</option>
     </select>
     <div style="margin-top: 0.7rem;">
       <button id="cameraScanBtn">Camera Scan</button>
